fix(assets/wwebidl.css): fix color contrast in IDL header (#2787)

--- a/assets/webidl.css
+++ b/assets/webidl.css
@@ -14,7 +14,7 @@ pre.idl {
 .idlHeader {
   display: block;
   width: 150px;
-  background: #90b8de;
+  background: #8ccbf2;
   color: #fff;
   font-family: sans-serif;
   font-weight: bold;
@@ -24,7 +24,6 @@ pre.idl {
 }
 
 .idlHeader a.self-link {
-   color: #fff;
    margin-left: .3cm;
    text-decoration: none;
    border-bottom: none;
